fdo#76934 : FILESAVE: DOCX: Title is not preserved after Roundtrip

Issue:
	- DOCX containing Title style with Paragraph and run properties as,
	  Justification, Bold, Font name, Size inside styles.xml is not
	  getting preserved.
	- Problem occurs when w:spacing has beforeAutoSpacing set to true
	  "inside styles.xml".

	Implementation:
	- At Import side do not insert AutoSpacing property if AutoSpacing
	  is getting imported from styles.xml
	- At Export side added check to write AutoSpacing.
	- Added Export Unit Test case.

Change-Id: I4b08b9b92536250855be31e1585743f9eed7af69